custom transport to map quarkus vertx handler and cxf